<resources>
    <string name="app_name">Cricketians</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="live">Live</string>
    <string name="stats">Stats</string>
    <string name="feed">Feed</string>
    <string name="news">News</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="register_yourself_to_continue">Register yourself to continue .</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_click_to_create_one">Don\'t have an account? Click to create one</string>
    <string name="add_post_button">add post button</string>
    <string name="post">POST</string>
    <string name="user_image">user image</string>
    <string name="like_button">like button</string>
    <string name="upload_your_avatar">Upload your avatar</string>
    <string name="logout">Logout</string>
    <string name="shop">Shop</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_image">Product Image</string>
    <string name="add_product">Add Product</string>
</resources>