<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_live">

    <fragment
        android:id="@+id/nav_live"
        android:name="app.cricketians.android.fragments.LiveFragment"
        android:label="@string/live"
        tools:layout="@layout/fragment_live" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="app.cricketians.android.fragments.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_feed"
        android:name="app.cricketians.android.fragments.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_news"
        android:name="app.cricketians.android.fragments.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
</navigation>