<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".activities.RegistrationActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/innerLinear"
        android:visibility="visible"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="5sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself_to_continue"
        android:padding="5sp"
        android:textSize="15sp"
        android:textColor="#E91E63"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:padding="8sp">

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/et_firstName"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:inputType="textPersonName"
            android:hint="@string/first_name"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:id="@+id/et_lastName"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            />

    </LinearLayout>

    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/et_Email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:padding="8sp"
        android:hint="@string/email"
        android:textAlignment="inherit"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/et_Password"
        android:text=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="5dp"
        android:padding="8sp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:id="@+id/et_ConfirmPassword"
        android:text=""
        android:hint="@string/confirm_password"
        android:inputType="textVisiblePassword"
        android:textSize="20sp"
        android:padding="8sp"
        android:layout_marginBottom="25dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_SignUp"
        android:visibility="visible"
        android:textSize="24sp"
        android:background="#E91E63"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="10sp"
        android:fontFamily="@font/alegreya_sc"
        android:text="@string/sign_up"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/have_an_account_sign_in"
        android:textSize="12sp"
        android:id="@+id/tv_signIn"
        android:layout_marginTop="5dp"/>

    </LinearLayout>
</LinearLayout>